--- a/mscthesis.tex
+++ b/mscthesis.tex
@@ -43,6 +43,10 @@
   \settocbibname{References}
 \usepackage{xcolor}
 
+% Miscellaneous
+
+\renewcommand{\contentsname}{Table of Contents} % Set display name of ToC
+
 \definecolor{gray75}{gray}{0.75}
 \definecolor{monokaibg}{HTML}{272822}
 \definecolor{dodgerblue4}{HTML}{31475E}
