--- a/content/geometry.tex
+++ b/content/geometry.tex
@@ -9,6 +9,7 @@
 
 % Load geometry package and define \left and \right, which otherwise is
 % impossible to directly via \setlength.
+
 \usepackage[
   paperwidth=\paperWidth,   % page width
   paperheight=\paperHeight, % page heigth
@@ -23,10 +24,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Increase linespread a bit (eyeballed)
+
 \linespread{1.2}
 
 % Set paragraph spacing to 6pt
+
 \setlength{\parskip}{6pt}
 
 % Remove paragraph indentation
+
 \setlength{\parindent}{0pt}
+
+\todo{Seitenlayout für Druck anpassen}
