Vectorized MVM Intro

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -58,6 +58,13 @@
   url = "https://www.openmp.org/",
   urldate = "2019-03-16",
 }
+@book{protbb2019,
+  author       = {Michael Voss and Rafael Asenjo and James Reinders},
+  title        = {Pro TBB: C++ Parallel Programming with Threading Building Blocks},
+  publisher    = {Apress},
+  date         = {2019},
+  keywords     = {tbb, c++, numa},
+}
 
 
 
