--- a/content/c3sr-outlook.tex
+++ b/content/c3sr-outlook.tex
@@ -6,3 +6,5 @@ Further shrink COMP by including it indirectly into JS. COMP analysis is much fa
 
 Further control over NUMA allocation. Mapping of arrays' sections to NUMA nodes can only be done perfectly AFTER the
 object has been created and it known, which NUMA nodes access which sections of V (complex matrices).
+
+\Todo{Proper NUMA control - Tbb does not allow for it}
