--- a/content/geometry.tex
+++ b/content/geometry.tex
@@ -34,3 +34,8 @@
 % Remove paragraph indentation
 
 \setlength{\parindent}{0pt}
+
+% Increse the arbitrarily limit of 10 columns in a matrix-environemtn.
+% .. Latex why?
+
+\setcounter{MaxMatrixCols}{20}
